# haneng

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  NOTICE.md  PLAN.md  README.md
.github/workflows/: ci.yml  release.yml
assets/: icon-64.rgba  tray-32.rgba
crates/haneng-cli/: Cargo.toml
crates/haneng-cli/src/: main.rs
crates/haneng-core/: Cargo.toml
crates/haneng-core/src/: auto.rs  compose.rs  config.rs  decompose.rs  detect.rs  hangul.rs  layout.rs  lexicon.rs  lexicon_data.rs  lib.rs  plan.rs  sebeolsik_data.rs  single_instance.rs  sync.rs  tracker.rs
crates/haneng-core/tests/: accuracy.rs
crates/haneng-datagen/: Cargo.toml
crates/haneng-datagen/src/: main.rs
crates/haneng-ffi/: Cargo.toml
crates/haneng-ffi/include/: haneng.h
crates/haneng-ffi/src/: lib.rs
crates/haneng-linux/: Cargo.toml
crates/haneng-linux/src/: inject.rs  keymap.rs  main.rs  render.rs
crates/haneng-macos/: Cargo.toml
crates/haneng-macos/src/: ax.rs  badge.rs  inject.rs  keymap.rs  mac_input.rs  main.rs  tis.rs  tray.rs
crates/haneng-settings/: Cargo.toml
crates/haneng-settings/src/: main.rs  update.rs
crates/haneng-windows/: Cargo.toml  build.rs
crates/haneng-windows/src/: appinfo.rs  ime.rs  indicator.rs  inject.rs  keymap.rs  main.rs  secure.rs  tray.rs
scripts/: gen-icon.py  haneng.wxs  package-linux.sh  package-macos.sh  package-windows.ps1  release.sh
