[workspace]
resolver = "2"
members = [
    "crates/haneng-core",
    "crates/haneng-macos",
    "crates/haneng-linux",
    "crates/haneng-datagen",
    "crates/haneng-settings",
    "crates/haneng-windows",
]

[workspace.package]
# 모든 크레이트가 공유하는 단일 버전 — 릴리스는 scripts/release.sh로.
version = "0.5.1"
edition = "2021"
license = "MIT"

# 배포 바이너리: 작게, 디버그 심벌 제거.
[profile.release]
lto = true
strip = true
codegen-units = 1
