[package]
name = "haneng-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "C ABI for haneng-core — consumed by the Fcitx5/IBus (Wayland) plugin track"

[lib]
name = "haneng"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
haneng-core = { path = "../haneng-core" }
