[package]
name = "haneng-linux"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Linux X11 adapter daemon for haneng (XRecord observe + XTest inject)"

[[bin]]
name = "hanengl"
path = "src/main.rs"

[dependencies]
haneng-core = { path = "../haneng-core" }

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["record", "xtest"] }
