[package]
name = "haneng-linux"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "haneng Linux (X11) daemon: hover Korean/English IME state indicator"

[[bin]]
name = "hanengl"
path = "src/main.rs"

[dependencies]
haneng-core = { path = "../haneng-core" }

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["xfixes", "xtest", "record"] }
fontdue = "0.9"
