[package]
name = "haneng-macos"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "macOS adapter daemon for haneng (CGEventTap hook + hotkey conversion)"

[[bin]]
name = "hanengd"
path = "src/main.rs"

[dependencies]
haneng-core = { path = "../haneng-core" }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.1"
core-foundation-sys = "0.8.7"
core-graphics = "0.25.0"
tao = "0.35.3"
tray-icon = "0.24.1"
