[package]
name = "haneng-macos"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "haneng macOS daemon: hover Korean/English IME state indicator"

[[bin]]
name = "hanengd"
path = "src/main.rs"

[dependencies]
haneng-core = { path = "../haneng-core" }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-foundation-sys = "0.8"
core-graphics = "0.25"
tao = "0.35"
tray-icon = "0.24"
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-foundation = "0.3"
