[package]
name = "haneng-settings"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Settings window for haneng (edits config.txt / exceptions.txt)"

[[bin]]
name = "haneng-settings"
path = "src/main.rs"

[dependencies]
eframe = "0.35.0"
haneng-core = { path = "../haneng-core" }
