[package]
name = "haneng-settings"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Settings window for haneng (edits config.txt / exceptions.txt)"

[[bin]]
name = "haneng-settings"
path = "src/main.rs"

[dependencies]
# glow(OpenGL) 백엔드 고정 — 기본 wgpu 백엔드는 Windows에서 D3D12 의존성
# (gpu-allocator ↔ windows 크레이트) 버전 충돌로 빌드가 깨진다.
eframe = { version = "0.35.0", default-features = false, features = [
    "default_fonts",
    "glow",
    "wayland",
    "x11",
] }
haneng-core = { path = "../haneng-core" }
