[package]
name = "haneng-settings"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Settings window for haneng (edits config.txt / exceptions.txt)"

[[bin]]
name = "haneng-settings"
path = "src/main.rs"

[dependencies]
# glow(OpenGL) 백엔드 고정 — 기본 wgpu 백엔드는 Windows에서 D3D12 의존성
# (gpu-allocator ↔ windows 크레이트) 버전 충돌로 빌드가 깨진다.
eframe = { version = "0.35.0", default-features = false, features = [
    "default_fonts",
    "glow",
    "wayland",
    "x11",
] }
haneng-core = { path = "../haneng-core" }

# 업데이트 확인용 HTTP 클라이언트. Windows는 rustls(ring)의 빌드 스크립트가
# 크로스체크를 깨뜨려 OS 네이티브 TLS(schannel)를 쓴다.
[target.'cfg(not(windows))'.dependencies]
ureq = "3.3.0"

[target.'cfg(windows)'.dependencies]
ureq = { version = "3.3.0", default-features = false, features = ["native-tls", "gzip"] }

[build-dependencies]
winresource = "0.1.31"
