[package]
name = "haneng-windows"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "haneng Windows daemon: hover Korean/English IME state indicator"

[[bin]]
name = "hanengw"
path = "src/main.rs"

[dependencies]
haneng-core = { path = "../haneng-core" }

[target.'cfg(windows)'.dependencies]
tray-icon = "0.24.1"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.60"
features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_Ime", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_System_SystemInformation"]

[build-dependencies]
winresource = "0.1.31"
