[package]
name = "haneng-windows"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "haneng Windows daemon: hover Korean/English IME state indicator"

[[bin]]
name = "hanengw"
path = "src/main.rs"

[dependencies]
haneng-core = { path = "../haneng-core" }

[target.'cfg(windows)'.dependencies]
tray-icon = "0.24.1"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.60"
features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_Ime", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_System_SystemInformation", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_Threading", "Win32_Security"]

# UI Automation(캐럿 폴백)만 여기서 쓴다. windows-sys의 원시 COM은 다루기
# 어려워 COM 인터페이스는 상위 크레이트 `windows`로 감싼다 (ABI 동일, 공존 OK).
[target.'cfg(windows)'.dependencies.windows]
version = "0.60"
features = ["Win32_Foundation", "Win32_UI_Accessibility", "Win32_System_Com", "Win32_System_Ole"]

[build-dependencies]
winresource = "0.1.31"
